# Open3DTest

./: README.md  build_vs2019.bat
src/: CMakeLists.txt  ONI3DConverter.cpp  ONI3DConverter.h  ONIDevice.cpp  ONIDevice.h  ONIListener.cpp  ONIListener.h  Open3DICPVisualizer.cpp  Open3DICPVisualizer.h  OpenCVCameraCalibrator.cpp  OpenCVCameraCalibrator.h  OpenCVStitcher.cpp  OpenCVStitcher.h  SaveStreamToDisk.cpp  SaveStreamToDisk.h  Stitcher.cpp  Stitcher.h  StitcherI.h  o3drhtest.cpp
